tests/invalid/annotation_dict_key_none/main.py
def run_case() -> None:
    bad: dict[None, int] = {}


if __name__ == "__main__":
    run_case()
